--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,22 @@
         <junit.version>5.9.1</junit.version>
     </properties>
 
-    <dependencies>
+
+        <dependencies>
+            <!-- Pull in as a traditional dependency -->
+            <dependency>
+                <groupId>com.konghq</groupId>
+                <artifactId>unirest-java</artifactId>
+                <version>3.14.1</version>
+            </dependency>
+            <dependency>
+                <groupId>com.konghq</groupId>
+                <artifactId>unirest-java-bom</artifactId>
+                <version>4.3.0</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
@@ -79,7 +94,12 @@
             <artifactId>mongodb-driver-sync</artifactId>
             <version>5.0.1</version>
         </dependency>
-    </dependencies>
+            <dependency>
+                <groupId>com.h2database</groupId>
+                <artifactId>h2</artifactId>
+                <version>2.2.224</version>
+            </dependency>
+        </dependencies>
 
     <build>
         <plugins>
