[database] set distant database data import in json files locally

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,11 @@
 
 
         <dependencies>
+            <dependency>
+                <groupId>org.mongodb</groupId>
+                <artifactId>mongodb-driver-sync</artifactId>
+                <version>LATEST</version> <!-- ou la dernière version disponible -->
+            </dependency>
             <!-- Pull in as a traditional dependency -->
             <dependency>
                 <groupId>com.konghq</groupId>
