--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
 
         <dependencies>
             <dependency>
+                <groupId>de.flapdoodle.embed</groupId>
+                <artifactId>de.flapdoodle.embed.mongo</artifactId>
+                <version>3.0.0</version>
+            </dependency>
+            <dependency>
                 <groupId>org.mongodb</groupId>
                 <artifactId>mongodb-driver-sync</artifactId>
                 <version>LATEST</version> <!-- ou la dernière version disponible -->
