--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
 
         <dependencies>
             <dependency>
+                <groupId>io.javalin</groupId>
+                <artifactId>javalin</artifactId>
+                <version>6.1.3</version>
+            </dependency>
+            <dependency>
                 <groupId>de.flapdoodle.embed</groupId>
                 <artifactId>de.flapdoodle.embed.mongo</artifactId>
                 <version>3.0.0</version>
