--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,9 @@
 
         <dependencies>
             <dependency>
-                <groupId>io.javalin</groupId>
-                <artifactId>javalin</artifactId>
-                <version>6.1.3</version>
+                <groupId>dev.morphia.morphia</groupId>
+                <artifactId>morphia-core</artifactId>
+                <version>2.4.13</version>
             </dependency>
             <dependency>
                 <groupId>de.flapdoodle.embed</groupId>
@@ -29,9 +29,9 @@
             <dependency>
                 <groupId>org.mongodb</groupId>
                 <artifactId>mongodb-driver-sync</artifactId>
-                <version>LATEST</version> <!-- ou la dernière version disponible -->
+                <version>4.11.1</version>
             </dependency>
-            <!-- Pull in as a traditional dependency -->
+
             <dependency>
                 <groupId>com.konghq</groupId>
                 <artifactId>unirest-java</artifactId>
@@ -128,8 +128,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.10.1</version>
                 <configuration>
-                    <source>9</source>
-                    <target>9</target>
+                    <source>16</source>
+                    <target>16</target>
                 </configuration>
             </plugin>
             <plugin>
