--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 #spring.data.mongodb.uri= mongodb://${MONGO_USERNAME}:${MONGO_PASSWORD}@localhost:27017/localDatabase?authSource=admin
+logging.level.org.mongodb.driver=DEBUG
+logging.level.org.springframework.boot=DEBUG
+logging.level.org.springframework.context=DEBUG
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.database=localDatabase
+#spring.data.mongodb.username=admin
+#spring.data.mongodb.password=admin123
+#spring.data.mongodb.authentication-database = admin
 
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=localDatabase
-spring.data.mongodb.username=admin
-spring.data.mongodb.password=admin123
-spring.data.mongodb.authentication-database = admin
+spring.data.mongodb.uri=mongodb://admin:admin123@localhost:8094/localDatabase?authSource=admin
