--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,13 @@
 logging.level.org.mongodb.driver=DEBUG
 logging.level.org.springframework.boot=DEBUG
 logging.level.org.springframework.context=DEBUG
+spring.main.web-application-type=NONE
+spring.config.import=optional:file:.env[.properties]
 #spring.data.mongodb.host=localhost
-#spring.data.mongodb.port=27017
+#spring.data.mongodb.port=8094
 #spring.data.mongodb.database=localDatabase
 #spring.data.mongodb.username=admin
 #spring.data.mongodb.password=admin123
 #spring.data.mongodb.authentication-database = admin
-
 spring.data.mongodb.uri=mongodb://admin:admin123@localhost:8094/localDatabase?authSource=admin
+spring.autoconfigure.exclude=de.flapdoodle.embed.mongo.spring.autoconfigure.EmbeddedMongoAutoConfiguration
