--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+.mvn/wrapper/maven-wrapper.jar
+**/src/main/**/target/
+**/src/test/**/target/
+*.jar
+*.dmg
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
