[plugins] handle file downloading

--- a/src/main/java/com/colinker/plugins/config.json
+++ b/src/main/java/com/colinker/plugins/config.json
@@ -2,6 +2,8 @@
   "plugins": [
     {
       "name": "Note",
+      "installed": false,
+      "url": "test.txt",
       "classes" : [
         {
           "className": "NoteController",
