--- a/.env
+++ b/.env
@@ -4,3 +4,10 @@ MONGO_PASSWORD=admin123
 MONGO_HOST=localhost
 MONGO_PORT=8094
 
+
+REMOTE_MONGO_DATABASE=maBaseDeDonnees
+REMOTE_MONGO_USERNAME=monUtilisateur
+REMOTE_MONGO_PASSWORD=monMotDePasse
+REMOTE_MONGO_HOST=localhost
+REMOTE_MONGO_PORT=27018
+
