--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,12 @@
     <dependencies>
         <!-- Dépendances existantes -->
         <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>java-dotenv</artifactId>
+            <version>5.2.2</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
             <version>3.2.5</version>
