add docker compose down command execution at application stop

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ MONGO_PASSWORD=admin123
 MONGO_HOST=localhost
 MONGO_PORT=8094
 ExterneApi_URL=http://benji0812.fr:8000
+RegisterPageUrl=http://benji0812.fr:3000/login
