fix all local routes for notes

--- a/.env
+++ b/.env
@@ -3,5 +3,11 @@ MONGO_USERNAME=admin
 MONGO_PASSWORD=admin123
 MONGO_HOST=localhost
 MONGO_PORT=8094
+
+REMOTE_MONGO_USERNAME=monUtilisateur
+REMOTE_MONGO_PASSWORD=monMotDePasse
+REMOTE_MONGO_PORT=27017
+REMOTE_MONGO_DATABASE=maBaseDeDonnees
+
 ExterneApi_URL=http://benji0812.fr:8000
 RegisterPageUrl=http://benji0812.fr:3000/login
