--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,7 @@
                 <directory>src/main/resources</directory>
                 <filtering>true</filtering>
                 <includes>
+                    <include>**/*.json</include>
                     <include>**/*.properties</include>
                     <include>**/*.fxml</include>
                 </includes>
