--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,10 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
         <!-- Dépendances existantes -->
         <dependency>
             <groupId>io.github.cdimascio</groupId>
@@ -26,11 +30,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
             <version>3.2.5</version>
-        </dependency>
-        <dependency>
-            <groupId>io.github.cdimascio</groupId>
-            <artifactId>java-dotenv</artifactId>
-            <version>5.2.2</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
