--- a/.env
+++ b/.env
@@ -6,8 +6,8 @@ MONGO_PORT=8094
 
 REMOTE_MONGO_USERNAME=monUtilisateur
 REMOTE_MONGO_PASSWORD=monMotDePasse
-REMOTE_MONGO_PORT=27017
+REMOTE_MONGO_PORT=3001
 REMOTE_MONGO_DATABASE=maBaseDeDonnees
 
-ExterneApi_URL=http://benji0812.fr:8000
-RegisterPageUrl=http://benji0812.fr:3000/login
+ExterneApi_URL=http://localhost:8000
+RegisterPageUrl=https://benji0812.fr:3000/login
