update task creation modal

--- a/.env
+++ b/.env
@@ -9,5 +9,5 @@ REMOTE_MONGO_PASSWORD=monMotDePasse
 REMOTE_MONGO_PORT=3001
 REMOTE_MONGO_DATABASE=maBaseDeDonnees
 
-ExterneApi_URL=http://benji0812.fr:8000/
-RegisterPageUrl=http://benji0812.fr:3000/login
+ExterneApi_URL=http://localhost:8000
+RegisterPageUrl=https://benji0812.fr:3000/login
