--- a/.env
+++ b/.env
@@ -6,8 +6,9 @@ MONGO_PORT=8094
 
 REMOTE_MONGO_USERNAME=monUtilisateur
 REMOTE_MONGO_PASSWORD=monMotDePasse
-REMOTE_MONGO_PORT=3001
+REMOTE_MONGO_PORT=27017
 REMOTE_MONGO_DATABASE=maBaseDeDonnees
+REMOTE_MONGO_HOST=localhost
 
 ExterneApi_URL=http://localhost:8000
-RegisterPageUrl=https://benji0812.fr:3000/login
+RegisterPageUrl=http://benji0812.fr:3000/login
