--- a/.env
+++ b/.env
@@ -10,5 +10,5 @@ REMOTE_MONGO_PORT=3001
 REMOTE_MONGO_DATABASE=maBaseDeDonnees
 REMOTE_MONGO_HOST=benji0812.fr
 
-ExterneApi_URL=http://benji0812.fr:8000/api
-RegisterPageUrl=http://benji0812.fr:3000/api/login
+ExterneApi_URL=https://benji0812.fr/api
+RegisterPageUrl=https://benji0812.fr/api/login
