remove active pane state in navbar

--- a/.env
+++ b/.env
@@ -11,4 +11,4 @@ REMOTE_MONGO_DATABASE=maBaseDeDonnees
 REMOTE_MONGO_HOST=benji0812.fr
 
 ExterneApi_URL=https://benji0812.fr/api
-RegisterPageUrl=https://benji0812.fr/api/login
+RegisterPageUrl=https://benji0812.fr/login
